tests/errors/phpdoc_annotation_without_dot.php
<?php

declare(strict_types=1);

/**
  * @param string $bar Some string.
 */
function foo ($bar): void
{
}
